<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:padding="@dimen/medium_gap"
        android:layout_marginStart="@dimen/medium_gap"

        android:src="@drawable/baseline_arrow_back_ios_24" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanist_bold"
        android:layout_marginStart="@dimen/medium_gap"
        android:layout_marginEnd="@dimen/medium_gap"
        android:layout_marginBottom="@dimen/medium_gap"
        android:text="@string/register_instruction"
        android:textAlignment="textStart"
        android:textSize="30sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_register_textfield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_label"
        android:layout_marginBottom="@dimen/medium_gap"
        android:layout_marginStart="@dimen/medium_gap"
        android:layout_marginEnd="@dimen/medium_gap">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_light"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_register_textfield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_label"
        android:layout_marginBottom="@dimen/medium_gap"
        android:layout_marginStart="@dimen/medium_gap"
        android:layout_marginEnd="@dimen/medium_gap">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_light"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_register_textfield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_label"
        android:layout_marginBottom="@dimen/medium_gap"
        android:layout_marginStart="@dimen/medium_gap"
        android:layout_marginEnd="@dimen/medium_gap">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_light"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmpassword_register_textfield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_label"
        android:layout_marginBottom="@dimen/medium_gap"
        android:layout_marginStart="@dimen/medium_gap"
        android:layout_marginEnd="@dimen/medium_gap">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_light"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_gap"
        android:layout_marginEnd="@dimen/medium_gap"
        android:layout_marginBottom="@dimen/medium_gap"
        android:fontFamily="@font/urbanist_medium"
        android:text="@string/occupation_question"
        android:textFontWeight="500"
        android:textSize="16sp">

    </TextView>











</LinearLayout>