<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.createclass.CreateAClassFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/medium_gap"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24">

    </ImageView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/create_a_new_class_label"
        android:textSize="30sp">


    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/classname_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_gap"
        android:layout_marginTop="@dimen/big_gap"
        android:layout_marginEnd="@dimen/big_gap"
        android:hint="@string/classname_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting_text_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Classname_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_light" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Section_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_gap"
        android:layout_marginTop="@dimen/big_gap"
        android:layout_marginEnd="@dimen/big_gap"
        android:hint="@string/section_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting_text_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/section_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_light" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_gap"
        android:layout_marginTop="@dimen/big_gap"
        android:layout_marginBottom="@dimen/small_gap"
        android:fontFamily="@font/urbanist_medium"
        android:text="@string/class_wallpaper_label"
        android:textColor="@color/buttoncolor"
        android:textSize="14sp">


    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/add_image_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        app:cardCornerRadius="@dimen/corner_radius">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bluegray"
          >

            <ImageView
                android:id="@+id/wallpaper_image_view"
                android:layout_width="330dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:scaleType="center"


                app:srcCompat="@drawable/outline_add_photo_alternate_24">

            </ImageView>

        </FrameLayout>


    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/buttoncolor"
        android:fontFamily="@font/urbanist_bold"
        android:text="Create"
        android:textColor="@color/white">

    </Button>


</LinearLayout>

</layout>